# audio-analysis

./: .gitignore  Procfile  README.md  run_minio.bat  run_redis.bat  start.bat  walkthrough.md
backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_file_hash.py
backend/scripts/: seed_admin.py  test_pipeline.py
backend/src/: worker_main.py
backend/src/application/services/: audio_job_service.py  job_event_service.py  report_exporter.py
backend/src/domain/entities/: analysis.py  audio_job.py  job_event.py  report.py  transcript.py  user.py  watcher_source.py
backend/src/domain/enums/: job_status.py  source_type.py  user_role.py
backend/src/domain/errors/: domain_errors.py
backend/src/domain/ports/: providers.py  repositories.py  storage_messaging.py
backend/src/domain/value_objects/: audio_metadata.py  call_metrics.py  speaker_segment.py  word_timestamp.py
backend/src/infrastructure/: container.py
backend/src/infrastructure/audio/: metadata_extractor.py
backend/src/infrastructure/auth/: jwt_service.py  password_service.py
backend/src/infrastructure/cache/: event_publisher.py  redis_client.py
backend/src/infrastructure/config/: settings.py
backend/src/infrastructure/db/: session.py  tables.py
backend/src/infrastructure/logging/: logger.py
backend/src/infrastructure/messaging/: queue_config.py  rabbitmq_consumer.py  rabbitmq_publisher.py  schemas.py  setup.py
backend/src/infrastructure/providers/analysis/: openai_analysis_provider.py
backend/src/infrastructure/providers/repair/: openai_repair_provider.py
backend/src/infrastructure/providers/stt/: openai_whisper_provider.py
backend/src/infrastructure/repositories/: analysis_repository.py  audio_job_repository.py  job_event_repository.py  other_repositories.py  transcript_repository.py
backend/src/infrastructure/storage/: minio_provider.py
backend/src/presentation/api/: app.py  dependencies.py  error_handlers.py  response.py
backend/src/presentation/api/v1/: auth.py  jobs.py  sources.py  uploads.py
backend/src/presentation/websocket/: server.py
backend/src/workers/: analysis_worker.py  base.py  repair_worker.py  report_worker.py  stt_worker.py
backend/src/workers/watcher/: file_hasher.py  filesystem_watcher.py
docs_ai/: ARCHITECTURE.md  Agents.md
frontend/: app.py
