[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "audio-analysis-backend"
version = "0.1.0"
description = "Audio Analysis Platform — Call Center & Sales Call Behavioral Analysis"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",

    # Database — SQLAlchemy Core (no ORM) + asyncpg driver
    "sqlalchemy[asyncio]>=2.0.30",   # Core only — table definitions + Alembic autogenerate
    "asyncpg>=0.29.0",               # Async PostgreSQL driver
    "alembic>=1.13.1",               # Migrations

    # Validation & settings
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "email-validator>=2.1.1",        # For EmailStr in User entity

    # Messaging
    "aio-pika>=9.4.1",               # RabbitMQ async client

    # Cache & pub/sub
    "redis[hiredis]>=5.0.4",

    # Object storage (MinIO / S3-compatible)
    "minio>=7.2.7",

    # Auth
    "PyJWT>=2.8.0",
    "passlib[bcrypt]>=1.7.4",

    # AI providers — OpenAI (Whisper STT + GPT-4o analysis)
    "openai>=1.30.0",

    # Audio metadata extraction
    "mutagen>=1.47.0",               # Fast audio metadata (format, duration, bitrate)

    # File watching (Watcher Service)
    "watchdog>=4.0.0",

    # Structured logging
    "structlog>=24.1.0",

    # Observability
    "prometheus-client>=0.20.0",

    # HTTP client (provider health checks, webhooks)
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "pytest-cov>=5.0.0",
    "anyio>=4.3.0",
    "mypy>=1.10.0",
    "ruff>=0.4.4",
    "import-linter>=2.0",
    "detect-secrets>=1.4.0",
    # Test DB helpers
    "testcontainers[postgres]>=4.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["src"]
omit = ["src/infrastructure/db/migrations/*"]

# ─── Architecture boundary enforcement ────────────────────────────────────────
[tool.importlinter]
root_packages = ["src"]

[[tool.importlinter.contracts]]
name = "Domain has no infrastructure imports"
type = "forbidden"
source_modules = ["src.domain"]
forbidden_modules = [
    "src.infrastructure",
    "src.presentation",
    "src.workers",
    "fastapi",
    "sqlalchemy",
    "aio_pika",
    "redis",
    "openai",
    "minio",
    "jwt",
    "passlib",
]

[[tool.importlinter.contracts]]
name = "Application does not import infrastructure directly"
type = "forbidden"
source_modules = ["src.application"]
forbidden_modules = [
    "src.infrastructure",
    "src.presentation",
    "sqlalchemy",
    "aio_pika",
    "redis",
    "openai",
    "minio",
]
